--- a/html/peerjs-cam-fb12.html
+++ b/html/peerjs-cam-fb12.html
@@ -51,20 +51,32 @@
         incomingCall.startTime = Date.now();
         incomingCall.on('stream', (remoteStream) => {
           if (!videoElements.has(incomingCall.peer)) {
-            const video = document.createElement('video');
-            video.srcObject = remoteStream;
-            video.autoplay = true;
-            video.dataset.peer = incomingCall.peer;
-            videoGrid.appendChild(video);
-            video.addEventListener('click', () => {
-              endCall(video);
+            const remoteVideo = document.createElement('video');
+            remoteVideo.srcObject = remoteStream;
+            remoteVideo.autoplay = true;
+            remoteVideo.dataset.peer = incomingCall.peer;
+            videoGrid.appendChild(remoteVideo);
+            remoteVideo.addEventListener('click', () => {
+              endCall(remoteVideo);
             });
-            videoElements.set(incomingCall.peer, video);
+            videoElements.set(incomingCall.peer, remoteVideo);
           } else {
-            const video = videoElements.get(incomingCall.peer);
-            video.srcObject = remoteStream;
+            const remoteVideo = videoElements.get(incomingCall.peer);
+            remoteVideo.srcObject = remoteStream;
           }
         });
+        if (!videoElements.has('me')) {
+          const localVideo = document.createElement('video');
+          localVideo.srcObject = stream;
+          localVideo.autoplay = true;
+          localVideo.muted = true;
+          localVideo.dataset.peer = 'me';
+          videoGrid.appendChild(localVideo);
+          videoElements.set('me', localVideo);
+        } else {
+          const localVideo = videoElements.get('me');
+          localVideo.srcObject = stream;
+        }
       };
       navigator.mediaDevices.getUserMedia({ video: true, audio: true }).then(answerCall).catch((error) => console.error(error));
     });
@@ -91,33 +103,34 @@
           callButton.addEventListener('click', () => {
             navigator.mediaDevices.getUserMedia({ video: true, audio: true }).then((stream) => {
               if (!videoElements.has('me')) {
-                const video = document.createElement('video');
-                video.srcObject = stream;
-                video.autoplay = true;
-                video.dataset.peer = 'me';
-                videoGrid.appendChild(video);
-                videoElements.set('me', video);
+                const localVideo = document.createElement('video');
+                localVideo.srcObject = stream;
+                localVideo.autoplay = true;
+                localVideo.muted = true;
+                localVideo.dataset.peer = 'me';
+                videoGrid.appendChild(localVideo);
+                videoElements.set('me', localVideo);
               } else {
-                const video = videoElements.get('me');
-                video.srcObject = stream;
+                const localVideo = videoElements.get('me');
+                localVideo.srcObject = stream;
               }
               const call = peer.call(value, stream);
               currentCalls.set(value, call);
               call.startTime = Date.now();
               call.on('stream', (remoteStream) => {
                 if (!videoElements.has(value)) {
-                  const video = document.createElement('video');
-                  video.srcObject = remoteStream;
-                  video.autoplay = true;
-                  video.dataset.peer = value;
-                  videoGrid.appendChild(video);
-                  video.addEventListener('click', () => {
-                    endCall(video);
+                  const remoteVideo = document.createElement('video');
+                  remoteVideo.srcObject = remoteStream;
+                  remoteVideo.autoplay = true;
+                  remoteVideo.dataset.peer = value;
+                  videoGrid.appendChild(remoteVideo);
+                  remoteVideo.addEventListener('click', () => {
+                    endCall(remoteVideo);
                   });
-                  videoElements.set(value, video);
+                  videoElements.set(value, remoteVideo);
                 } else {
-                  const video = videoElements.get(value);
-                  video.srcObject = remoteStream;
+                  const remoteVideo = videoElements.get(value);
+                  remoteVideo.srcObject = remoteStream;
                 }
               });
             }).catch((error) => console.error(error));
