--- a/html/peerjs-cam-fb13.html
+++ b/html/peerjs-cam-fb13.html
@@ -1,132 +1,90 @@
-<!-- https://jay23606.github.io/chat-gpt-voice/html/peerjs-cam-fb13.html -->
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>PeerJS Video Chat</title>
+    <meta charset="utf-8">
+    <title>p2p-webcam</title>
+    <style>
+        #video-grid { display: flex; flex-wrap: wrap; }
+        #local-video { position: fixed; top: 0; right: 0; width: 20%; }
+        video:not(#local-video) { width: 33%; }
+    </style>
 </head>
 <body>
-  <div id="video-grid">
-    <video id="local-video" autoplay></video>
-  </div>
-  <div id="peers">
-    <h3>My PeerJS ID: <span id="my-id"></span></h3>
-    <button id="refresh-btn">Refresh</button>
-  </div>
-  <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
-  <script>
-    const firebaseConfig = { databaseURL: "https://jabdal-default-rtdb.firebaseio.com" };
-    firebase.initializeApp(firebaseConfig);
-    const dbRef = firebase.database().ref('peers'),
-          $ = (id) => document.getElementById(id),
-          peer = new Peer();
-    const myIdSpan = $('my-id'),
-          videoGrid = $('video-grid');
-    let currentCalls = new Map(),
-        videoElements = new Map();
+    <div id="video-grid"><video id="local-video" autoplay></video></div>
+    <div id="peers"></div>
+    <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <script>
+        const $$ = sel => document.querySelectorAll(sel), $ = (id, properties) => { const element = document.getElementById(id); if (properties) Object.assign(element, properties); return element; };
+        const $el = (el, attrs = {}) => Object.assign(document.createElement(el), attrs);
+        Element.prototype.append = function (...children) { children.forEach(child => { if (typeof child === 'string') child = document.createTextNode(child); this.appendChild(child); }); };
+        HTMLElement.prototype.on = function (e, fn) { this.addEventListener(e, fn) };
 
-    const endCall = (video) => {
-      const peerId = video.dataset.peer;
-      currentCalls.get(peerId).close();
-      currentCalls.delete(peerId);
-      const videosToRemove = document.querySelectorAll(`video[data-peer="${peerId}"]`);
-      videosToRemove.forEach((video) => {
-        video.parentNode.removeChild(video);
-      });
-      console.log(`Call with ${peerId} closed`);
-      refreshPeers();
-    }
+        const firebaseConfig = { databaseURL: "https://jabdal-default-rtdb.firebaseio.com" }, media = navigator.mediaDevices.getUserMedia;
+        firebase.initializeApp(firebaseConfig);
+        const dbRef = firebase.database().ref('peers'), peer = new Peer(), videoGrid = $('video-grid');
+        let currentCalls = new Map(), videoElements = new Map();
 
-    navigator.mediaDevices.getUserMedia({ video: true, audio: true }).then((stream) => {
-      const localVideo = $('local-video');
-      localVideo.srcObject = stream;
-      localVideo.volume = 1;
-    }).catch((error) => console.error(error));
+        const endCall = (video) => {
+            const peerId = video.dataset.peer;
+            currentCalls.get(peerId).close();
+            currentCalls.delete(peerId);
+            const videosToRemove = $$(`video[data-peer="${peerId}"]`);
+            videosToRemove.forEach((video) => video.parentNode.removeChild(video));
+            refreshPeers();
+        }
 
-    peer.on('open', (id) => {
-      myIdSpan.innerText = id;
-      dbRef.onDisconnect().remove();
-      dbRef.push(id);
-      refreshPeers();
-    });
-    peer.on('call', (incomingCall) => {
-      const answerCall = (stream) => {
-        currentCalls.set(incomingCall.peer, incomingCall);
-        incomingCall.answer(stream);
-        incomingCall.startTime = Date.now();
-        incomingCall.on('stream', (remoteStream) => {
-          if (!videoElements.has(incomingCall.peer)) {
-            const remoteVideo = document.createElement('video');
-            remoteVideo.srcObject = remoteStream;
-            remoteVideo.autoplay = true;
-            remoteVideo.dataset.peer = incomingCall.peer;
-            videoGrid.appendChild(remoteVideo);
-            remoteVideo.addEventListener('click', () => {
-              endCall(remoteVideo);
-            });
-            videoElements.set(incomingCall.peer, remoteVideo);
-          } else {
-            const remoteVideo = videoElements.get(incomingCall.peer);
-            remoteVideo.srcObject = remoteStream;
-          }
+        media({ video: true, audio: true }).then((stream) =>  $('local-video', { srcObject: stream })).catch((error) => console.error(error));
+
+        peer.on('open', (id) => {
+            dbRef.onDisconnect().remove();
+            dbRef.push(id);
+            refreshPeers();
         });
-      };
-      navigator.mediaDevices.getUserMedia({ video: true, audio: true }).then(answerCall).catch((error) => console.error(error));
-    });
-    const refreshPeers = () => {
-      dbRef.once('value').then((snapshot) => {
-        const peersDiv = $('peers');
-        peersDiv.innerHTML = '';
-        peersDiv.appendChild(document.createElement('hr'));
-        peersDiv.appendChild(document.createElement('br'));
-        const myIdDiv = document.createElement('div');
-        myIdDiv.innerText = `My ID: ${peer.id}`;
-        peersDiv.appendChild(myIdDiv);
-        peersDiv.appendChild(document.createElement('br'));
-        const refreshBtn = document.createElement('button');
-        refreshBtn.innerText = 'Refresh';
-        refreshBtn.addEventListener('click', refreshPeers);
-        peersDiv.appendChild(refreshBtn);
-        peersDiv.appendChild(document.createElement('br'));
-        snapshot.forEach((childSnapshot) => {
-          const value = childSnapshot.val();
-          if (value === peer.id) return;
-          const callButton = document.createElement('button');
-          callButton.innerText = `Call ${value}`;
-          callButton.addEventListener('click', () => {
-            navigator.mediaDevices.getUserMedia({ video: true, audio: true }).then((stream) => {
-              const localVideo = $('local-video');
-              localVideo.srcObject = stream;
-              localVideo.volume = 1;
-              const call = peer.call(value, stream);
-              currentCalls.set(value, call);
-              call.startTime = Date.now();
-              call.on('stream', (remoteStream) => {
-                if (!videoElements.has(value)) {
-                  const remoteVideo = document.createElement('video');
-                  remoteVideo.srcObject = remoteStream;
-                  remoteVideo.autoplay = true;
-                  remoteVideo.dataset.peer = value;
-                  videoGrid.appendChild(remoteVideo);
-                  remoteVideo.addEventListener('click', () => {
-                    endCall(remoteVideo);
-                  });
-                  videoElements.set(value, remoteVideo);
-                } else {
-                  const remoteVideo = videoElements.get(value);
-                  remoteVideo.srcObject = remoteStream;
-                }
-              });
+        peer.on('call', (incomingCall) => {
+            const answerCall = (stream) => {
+                currentCalls.set(incomingCall.peer, incomingCall);
+                incomingCall.answer(stream);
+                incomingCall.on('stream', (remoteStream) => {
+                    if (!videoElements.has(incomingCall.peer)) {
+                        const remoteVideo = $el('video', { srcObject: remoteStream, autoplay: true, onclick: () => endCall(remoteVideo), title: incomingCall.peer });
+                        remoteVideo.dataset.peer = incomingCall.peer;
+                        videoGrid.appendChild(remoteVideo);
+                        videoElements.set(incomingCall.peer, remoteVideo);
+                    } else  videoElements.get(incomingCall.peer).srcObject = remoteStream;  
+                });
+            };
+            media({ video: true, audio: true }).then(answerCall).catch((error) => console.error(error));
+        });
+        const refreshPeers = () => {
+            dbRef.once('value').then((snapshot) => {
+                const pDiv = $('peers');
+                pDiv.innerHTML = '';
+                pDiv.append($el('br'), $el('div', { innerText: `My ID: ${peer.id}` }), $el('br'), $el('button', { innerText: 'Refresh', onclick: refreshPeers }), $el('br'));
+                snapshot.forEach((childSnapshot) => {
+                    const value = childSnapshot.val();
+                    if (value === peer.id) return;
+                    const callButton = $el('button', { innerText: `Call ${value}` });
+                    callButton.on('click', () => {
+                        media({ video: true, audio: true }).then((stream) => {
+                            $('local-video', { srcObject: stream });
+                            const call = peer.call(value, stream);
+                            currentCalls.set(value, call);
+                            call.on('stream', (remoteStream) => {
+                                if (!videoElements.has(value)) {
+                                    const remoteVideo = $el('video', { srcObject: remoteStream, autoplay: true, onclick: () => endCall(remoteVideo), title: value });
+                                    remoteVideo.dataset.peer = value;
+                                    videoGrid.appendChild(remoteVideo);
+                                    videoElements.set(value, remoteVideo);
+                                } else videoElements.get(value).srcObject = remoteStream
+                            });
+                        }).catch((error) => console.error(error));
+                    });
+                    pDiv.append(callButton, $el('br'));
+                });
             }).catch((error) => console.error(error));
-          });
-          peersDiv.appendChild(callButton);
-          peersDiv.appendChild(document.createElement('br'));
-        });
-      }).catch((error) => console.error(error));
-    };
-  </script>
+        };
+    </script>
 </body>
 </html>
