--- a/html/describe-image.htm
+++ b/html/describe-image.htm
@@ -37,7 +37,7 @@
           'model': model,
           'prompt': prompt,
           'num_images': 1,
-          'size': '256',
+          'size': '256x256',
           'response_format': 'text',
         };
 
