gpt-voice commit

--- a/html/amort.htm
+++ b/html/amort.htm
@@ -101,7 +101,7 @@ table th{border:1px solid black}
 table {border-collapse:collapse}
 table td{border:1px solid black}
 table th{border:1px solid black}
-input[type="text"]{width:111px}
+input[type="number"]{width:111px}
 </style>
 </head>
 <body>
