gpt-voice commit

--- a/html/income-calc.htm
+++ b/html/income-calc.htm
@@ -59,7 +59,7 @@
                     B -= A;
                     MI += CF; //increase monthly income by CF for each acquistion
                 }
-                outputDiv.innerHTML += `N: ${N}, MI: ${MI}, B: ${B} <br/>`;
+                outputDiv.innerHTML += `Month: ${N}, MI: ${MI}, B: ${B} <br/>`;
             }
 
             outputDiv.innerHTML += `Number of months to exceed $100,000 in monthly income: ${N} (${N / 12} years) <br/>`;
