--- a/html/goal-calc.htm
+++ b/html/goal-calc.htm
@@ -72,6 +72,7 @@
               	if(N>=360){
                		MI -= CF*acqArr[N-360];
                   	P -= acqArr[N-360];
+                  	outputDiv.innerHTML += `MI reduce by ${CF*acqArr[N-360]} due to payoff of ${acqArr[N-360]} properties<br/>`;
                 }
                 outputDiv.innerHTML += `Month: ${N}, MI: ${MI}, B: ${B}, P: ${P}, P-p: ${P-p} <br/>`;
             }
