--- a/html/goal-calc.htm
+++ b/html/goal-calc.htm
@@ -78,10 +78,10 @@
               	if(N>=T){
                   	var buyerPaidOff = acqArr[N-T];
                   	if(buyerPaidOff>0){
-                      outputDiv.innerHTML += `Month (before): ${N}, MI: ${MI}, B: ${B}, P: ${P}, P-p: ${P-p} <br/>`;
+                      outputDiv.innerHTML += ` Month (before): ${N}, MI: ${MI}, B: ${B}, P: ${P}, P-p: ${P-p} <br/>`;
                       MI -= CF*buyerPaidOff;
                       P -= buyerPaidOff;
-                      outputDiv.innerHTML += `MI reduce by ${CF*buyerPaidOff} due to payoff of ${buyerPaidOff} properties<br/>`;
+                      outputDiv.innerHTML += ` MI reduced by ${CF*buyerPaidOff} due to payoff of ${buyerPaidOff} properties<br/>`;
                     }
                 }
                 outputDiv.innerHTML += `Month: ${N}, MI: ${MI}, B: ${B}, P: ${P}, P-p: ${P-p} <br/>`;
