--- a/html/goal-calc.htm
+++ b/html/goal-calc.htm
@@ -38,7 +38,7 @@
         </tr>
       <tr>
             <td>Note Term (T, months):</td>
-            <td><input type="text" id="noteTerm" value="360" /></td>
+            <td><input type="text" id="noteTerm" value="300" /></td>
         </tr>
     </table>
 
@@ -84,7 +84,7 @@
                       outputDiv.innerHTML += ` MI reduced by ${CF*buyerPaidOff} due to payoff of ${buyerPaidOff} properties<br/>`;
                     }
                 }
-                outputDiv.innerHTML += `Month: ${N}, MI: ${MI}, B: ${B}, P: ${P}, P-p: ${P-p} <br/>`;
+                outputDiv.innerHTML += `Month: ${N}, MI: ${MI}, B: ${B}, P: ${P}, P1-P0: ${P-p} <br/>`;
             }
 
             outputDiv.innerHTML += `Number of months to exceed $${CF_goal} in monthly income: ${N} (${N / 12} years) <br/>`;
