--- a/html/loan-payments.htm
+++ b/html/loan-payments.htm
@@ -102,17 +102,22 @@ Loan_604_Center_St:
 					payments[month].interest = (loan.amount*(loan.rate/(100*12))).toFixed(2);
 					payments[month].paydown = (payments[month].payment - loan.escrow - payments[month].interest).toFixed(2);
 					if(payments[month].paydown > 0) {
-						if((loan['Interest Unpaid'] || 0) === 0){
+						if((loan['unpaid interest'] || 0) === 0){
 							loan.amount = (loan.amount - payments[month].paydown).toFixed(2); //there is no unpaid interest
-						}else if(loan['Interest Unpaid'] >= payments[month].paydown){
-							loan['Interest Unpaid'] -= payments[month].paydown; //there is unpaid interest in excess of the paydown
+							payments[month]['principal paydown'] = payments[month].paydown;
+						}else if(loan['unpaid interest'] >= payments[month].paydown){
+							loan['unpaid interest'] -= payments[month].paydown; //there is unpaid interest in excess of the paydown
+							payments[month]['principal paydown'] = 0;
+							payments[month]['unpaid interest paydown'] = payments[month].paydown;
 						}else{
-							var interestUnpaid = loan['Interest Unpaid']; //there is some unpaid interest but not in excess of payment
-							loan['Interest Unpaid'] = 0;
-							loan.amount = (loan.amount - (payments[month].paydown - interestUnpaid)).toFixed(2);
+							var interestUnpaid = loan['unpaid interest']; //there is some unpaid interest but not in excess of payment
+							loan['unpaid interest'] = 0;
+							payments[month]['principal paydown'] = (payments[month].paydown - interestUnpaid).toFixed(2);
+							payments[month]['unpaid interest paydown'] = interestUnpaid;
+							loan.amount = (loan.amount - payments[month]['principal paydown']).toFixed(2);
 						}
 					}
-					else loan['Interest Unpaid'] = (loan['Interest Unpaid'] || 0) - payments[month].paydown;
+					else loan['unpaid interest'] = (loan['Interest Unpaid'] || 0) - payments[month].paydown;
 				}
 			}
 		}
